refactor: separate TCP mock execution and admin operations